Basic game (without time travel)

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-col-center {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.font-spooky {
+  font-family: "Lacquer", cursive;
 }
 
-@keyframes App-logo-spin {
+.glowing-text {
+  animation: glowing-text 1s alternate-reverse infinite;
+}
+
+.glowing-border {
+  animation: glowing-border 1s alternate-reverse infinite;
+}
+
+@keyframes glowing-text {
   from {
-    transform: rotate(0deg);
+    text-shadow: 0 0 50px orangered, 0 0 20px orangered, 0 0 2px black;
   }
   to {
-    transform: rotate(360deg);
+    text-shadow: 0 0 40px rgb(116, 31, 0), 0 0 20px rgb(116, 31, 0),
+      0 0 2px black;
   }
+}
+
+@keyframes glowing-border {
+  from {
+    box-shadow: 0 0 40px orangered, 0 0 20px orangered, 0 0 2px black;
+  }
+  to {
+    box-shadow: 0 0 40px rgb(116, 31, 0), 0 0 20px rgb(116, 31, 0),
+      0 0 2px black;
+  }
+}
+
+.btn {
+  background-color: black;
+  color: orangered;
+  padding: 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  box-shadow: 0 0 2px orangered;
+}
+
+.btn:hover {
+  color: black;
+  background-color: orangered;
+  box-shadow: 0 0 20px orangered;
 }
