--- a/src/components/PlayerInput/PlayerInput.css
+++ b/src/components/PlayerInput/PlayerInput.css
@@ -2,30 +2,27 @@
   margin: 1rem;
   border: none;
 }
+.player-input-container :nth-child(n + 1) {
+  margin-top: 1rem;
+}
 
 .player-input__legend {
-  margin: 1rem 0;
   letter-spacing: 5px;
   font-size: 1.2rem;
 }
 
 .player-input__name {
   color: orangered;
-  padding: 1rem 0.5rem;
+  padding: 0.75rem;
   border-radius: 3px;
   border: none;
-  margin: 1rem;
   width: 100%;
   font-size: 1.2rem;
 }
 
-.player-input__name::placeholder {
-}
-
 .player-input__character {
-  margin: 1rem;
   color: orangered;
-  padding: 1rem 0.5rem;
+  padding: 0.75rem;
   border-radius: 3px;
   border: none;
   width: 100%;
