--- a/src/components/StartScreen/StartScreen.css
+++ b/src/components/StartScreen/StartScreen.css
@@ -1,14 +1,17 @@
 .start-screen {
   color: orangered;
-  padding: 1rem;
+  padding: 2rem;
   margin: 1rem;
   border-radius: 10px;
   box-shadow: 0 0 2px orangered;
 }
 
+.start-screen main {
+  margin: 1rem;
+}
+
 .start-screen button.btn {
   box-shadow: 0 0 2px orangered;
-  margin-bottom: 1rem;
   font-size: 1.2rem;
 }
 
